--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,11 +3,7 @@
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 		"target": "ES2020",
 		"useDefineForClassFields": true,
-		"lib": [
-			"ES2020",
-			"DOM",
-			"DOM.Iterable"
-		],
+		"lib": ["ES2020", "DOM", "DOM.Iterable"],
 		"module": "ESNext",
 		"skipLibCheck": true,
 		/* Bundler mode */
@@ -24,24 +20,12 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true,
 		"paths": {
-			"Assets/*": [
-				"./src/assets/*"
-			],
-			"Scss/*": [
-				"./src/scss/*"
-			],
-			"Components/*": [
-				"./src/components/*"
-			],
-			"Common/*": [
-				"./src/common/*"
-			],
-			"Pages/*": [
-				"./src/pages/*"
-			]
+			"Assets/*": ["./src/assets/*"],
+			"Scss/*": ["./src/scss/*"],
+			"Components/*": ["./src/components/*"],
+			"Common/*": ["./src/common/*"],
+			"Pages/*": ["./src/pages/*"]
 		}
 	},
-	"include": [
-		"src"
-	]
+	"include": ["src"]
 }
