--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,7 +3,11 @@
 		"tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 		"target": "ES2020",
 		"useDefineForClassFields": true,
-		"lib": ["ES2020", "DOM", "DOM.Iterable"],
+		"lib": [
+			"ES2020",
+			"DOM",
+			"DOM.Iterable"
+		],
 		"module": "ESNext",
 		"skipLibCheck": true,
 		"strictNullChecks": false,
@@ -21,13 +25,27 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUncheckedSideEffectImports": true,
 		"paths": {
-			"Assets/*": ["./src/assets/*"],
-			"Scss/*": ["./src/scss/*"],
-			"Components/*": ["./src/components/*"],
-			"Common/*": ["./src/common/*"],
-			"Pages/*": ["./src/pages/*"],
-			"Store/*": ["./src/store/*"]
+			"Assets/*": [
+				"./src/assets/*"
+			],
+			"Scss/*": [
+				"./src/scss/*"
+			],
+			"Components/*": [
+				"./src/components/*"
+			],
+			"Common/*": [
+				"./src/common/*"
+			],
+			"Pages/*": [
+				"./src/pages/*"
+			],
+			"Store/*": [
+				"./src/store/*"
+			]
 		}
 	},
-	"include": ["src"]
+	"include": [
+		"src"
+	]
 }
