--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"react-redux": "^9.2.0",
-		"react-router-dom": "^7.1.5"
+		"react-router-dom": "6.22.0"
 	},
 	"devDependencies": {
 		"@types/node": "^22.13.1",
